--- a/app/Resources/views/lift/_form.html.twig
+++ b/app/Resources/views/lift/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form, {
     'attr': {
-        'class': 'form-inline',
+        'class': 'form-inline js-rep-log-form',
         'novalidate': 'novalidate'
     }
 }) }}
