--- a/app/Resources/views/lift/index.html.twig
+++ b/app/Resources/views/lift/index.html.twig
@@ -19,20 +19,12 @@
                     <th>&nbsp;</th>
                 </tr>
                 </thead>
-                <tbody>
-                {% for repLog in repLogs %}
-                    {{ include('lift/_repRow.html.twig') }}
-                {% else %}
-                    <tr>
-                        <td colspan="4">Get liftin'!</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
+                <tbody></tbody>
                 <tfoot>
                     <tr>
                         <td>&nbsp;</td>
                         <th>Total</th>
-                        <th class="js-total-weight">{{ totalWeight }}</th>
+                        <th class="js-total-weight"></th>
                         <td>&nbsp;</td>
                     </tr>
                 </tfoot>
@@ -64,6 +56,22 @@
             var $wrapper = $('.js-rep-log-table');
             RepLogApp = new RepLogApp($wrapper);
         });
+    </script>
+
+    <script type="text/template" id="js-rep-log-row-template">
+        <tr data-weight="<%= totalWeightLifted %>">
+            <td><%= itemLabel %></td>
+            <td><%= reps %></td>
+            <td><%= totalWeightLifted %></td>
+            <td>
+                <a href="#" class="js-delete-rep-log" data-url="<%= links._self %>">
+                    <span class="fa fa-trash"></span>
+                </a>
+            </td>
+            <td>
+                &nbsp;
+            </td>
+        </tr>
     </script>
 
 {% endblock %}
