--- a/app/Resources/views/lift/index.html.twig
+++ b/app/Resources/views/lift/index.html.twig
@@ -56,7 +56,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.29.2/sweetalert2.all.js"></script>
-    <script src="{{ asset('assets/js/RepLogApp.js') }}"></script>
+    <script src="{{ asset('assets/dist/RepLogApp.js') }}"></script>
     <script>
         $(document).ready(function() {
             var $wrapper = $('.js-rep-log-table');
